--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -328,7 +328,7 @@
               >
             </a>
           {% endif %}
-          {% if site.enable_publication_badges.github_stars and entry_has_google_scholar_badge %}
+          {% if site.enable_publication_badges.github_stars and entry_has_github_stars %}
             <a
               href="https://github.com/{{ entry.github }}"
               aria-label="Github link"
