--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -332,6 +332,18 @@
               >
             </a>
           {% endif %}
+          {% if site.enable_publication_badges.github_stars and entry_has_github_stars %}
+            <a
+              href="https://github.com/{{ entry.github }}"
+              aria-label="Github link"
+              role="button"
+            >
+              <img
+                src="https://img.shields.io/github/stars/{{ entry.github }}?style=flat&logo=github&logoColor=black&labelColor=beige&color=green"
+                alt="{{ entry.github }} Repo"
+              >
+            </a>
+          {% endif %}
           {% if site.enable_publication_badges.inspirehep and entry_has_inspirehep_badge %}
             <a
               href="https://inspirehep.net/literature/{{ entry.inspirehep_id }}"
