--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -235,6 +235,7 @@
       {% endif %}
       {% if entry.code %}
         <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
+      {% endif %}
     <span style="vertical-align: middle;">Code</span>
     <img src="https://img.shields.io/github/stars/{{ entry.github }}?style=social" alt="GitHub Stars" style="height: 20px; margin-left: 5px; vertical-align: middle;">
   </a>
