--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -236,10 +236,6 @@
       {% if entry.code %}
         <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
       {% endif %}
-    <span style="vertical-align: middle;">Code</span>
-    <img src="https://img.shields.io/github/stars/{{ entry.github }}?style=social" alt="GitHub Stars" style="height: 20px; margin-left: 5px; vertical-align: middle;">
-  </a>
-      {% endif %}
       {% if entry.poster %}
         {% if entry.poster contains '://' %}
           <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
@@ -274,16 +270,11 @@
         {% assign entry_has_google_scholar_badge = true %}
       {% endif %}
 
-      {% assign entry_has_github_stars = false %}
-      {% if entry.github %}
-        {% assign entry_has_github_stars = true %}
-      {% endif %}
-
       {% assign entry_has_inspirehep_badge = false %}
       {% if entry.inspirehep_id %}
         {% assign entry_has_inspirehep_badge = true %}
       {% endif %}
-      {% if entry_has_altmetric_badge or entry_has_dimensions_badge or entry_has_google_scholar_badge or entry_has_inspirehep_badge or entry_has_github_stars%}
+      {% if entry_has_altmetric_badge or entry_has_dimensions_badge or entry_has_google_scholar_badge or entry_has_inspirehep_badge %}
         <div class="badges">
           {% if site.enable_publication_badges.altmetric and entry_has_altmetric_badge %}
             <span
@@ -329,18 +320,6 @@
               <img
                 src="https://img.shields.io/badge/scholar-{% google_scholar_citations site.data.socials.scholar_userid entry.google_scholar_id %}-4285F4?logo=googlescholar&labelColor=beige"
                 alt="{% google_scholar_citations site.data.socials.scholar_userid entry.google_scholar_id %} Google Scholar citations"
-              >
-            </a>
-          {% endif %}
-          {% if site.enable_publication_badges.github_stars and entry_has_github_stars %}
-            <a
-              href="https://github.com/{{ entry.github }}"
-              aria-label="Github link"
-              role="button"
-            >
-              <img
-                src="https://img.shields.io/github/stars/{{ entry.github }}?style=flat&logo=github&logoColor=black&labelColor=beige&color=green"
-                alt="{{ entry.github }} Repo"
               >
             </a>
           {% endif %}
