--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -270,11 +270,16 @@
         {% assign entry_has_google_scholar_badge = true %}
       {% endif %}
 
+      {% assign entry_has_github_stars = false %}
+      {% if entry.github %}
+        {% assign entry_has_github_stars = true %}
+      {% endif %}
+
       {% assign entry_has_inspirehep_badge = false %}
       {% if entry.inspirehep_id %}
         {% assign entry_has_inspirehep_badge = true %}
       {% endif %}
-      {% if entry_has_altmetric_badge or entry_has_dimensions_badge or entry_has_google_scholar_badge or entry_has_inspirehep_badge %}
+      {% if entry_has_altmetric_badge or entry_has_dimensions_badge or entry_has_google_scholar_badge or entry_has_inspirehep_badge or entry_has_github_stars %}
         <div class="badges">
           {% if site.enable_publication_badges.altmetric and entry_has_altmetric_badge %}
             <span
@@ -320,6 +325,18 @@
               <img
                 src="https://img.shields.io/badge/scholar-{% google_scholar_citations site.data.socials.scholar_userid entry.google_scholar_id %}-4285F4?logo=googlescholar&labelColor=beige"
                 alt="{% google_scholar_citations site.data.socials.scholar_userid entry.google_scholar_id %} Google Scholar citations"
+              >
+            </a>
+          {% endif %}
+          {% if site.enable_publication_badges.github_stars and entry_has_github_stars %}
+            <a
+              href="https://github.com/{{ entry.github }}"
+              aria-label="Github link"
+              role="button"
+            >
+              <img
+                src="https://img.shields.io/github/stars/{{ entry.github }}?style=flat&logo=github&logoColor=black&labelColor=beige&color=green"
+                alt="{{ entry.github }} Repo"
               >
             </a>
           {% endif %}
